# Container-Plugins

./: .gitignore  README.md  _config.yml  package.sh  prepare_for_packaging.sh  prepare_for_packging.sh
.github/workflows/: DailyTest.yml
.secplugs/plugins/: manifests.json
.secplugs/plugins/docker_file_watcher/: detail.html  summary.html
.secplugs/plugins/linux_file_watcher/: detail.html  summary.html
dockerplugin/: CMakeLists.txt  dockerplugin.service
dockerplugin/lib/config/: configloader.cpp  configloader.h
dockerplugin/lib/filewatcher/: filewatcher.cpp  filewatcher.h
dockerplugin/lib/rest/: restclient.cpp  restclient.h
dockerplugin/lib/utils/: common.cpp  common.h
dockerplugin/tests/: configloadertest.cpp
dockerplugin/tests/data/: testfile.sh  valid.json
docs/: HowTo.adoc  HowTo.html  about.html  index.md
docs/containers/: HowTo.adoc  HowTo.md  QuickStartGuide.md  _detail.md  _summary.md  about.adoc  detail.html  detail.md  index.md  summary.md
docs/linux/: HowTo.adoc  HowTo.md  QuickStartGuide.md  _detail.md  _summary.md  about.adoc  detail.html  detail.md  index.md  summary.md
packaging/alpine/: APKBUILD
packaging/debian/: secplugs-linux-oas-plugin.deb
packaging/debian/secplugs-linux-oas-plugin/DEBIAN/: control  postinst
packaging/debian/secplugs-linux-oas-plugin/etc/secplugs/: config.json
packaging/debian/secplugs-linux-oas-plugin/lib/systemd/system/: secplugs-oas-plugin.service
packaging/debian/template/: README.Debian  README.source  changelog  control  dockerplugin.cron.d.ex  dockerplugin.doc-base.EX  manpage.1.ex  manpage.sgml.ex  postinst  postinst.ex  preinst.ex  prerm.ex
packaging/ubuntu/template/: changelog  control  copyright  manpage.xml.ex  postrm.ex  watch.ex
system_tests/: Dockerfile.debian  Dockerfile.ubuntu  install_test.tgz  secplugs.gpg  secplugs.list  setup.tgz  start.sh  test_debian.sh  test_ubuntu.sh
